@@ -21,7 +21,7 @@
 Copy customconfig.py.example to customconfig.py and change the values in the
 user options section below.
 
-$Id: customconfig.py.example,v 1.8 2004/08/17 16:19:58 tiran Exp $
+$Id: customconfig.py.example,v 1.9 2004/09/28 22:53:21 tiran Exp $
 """ 
 
 from Products.ATContentTypes.Permissions import ADD_CONTENT_PERMISSION, ADD_TOPIC_PERMISSION
@@ -62,7 +62,7 @@ MX_TIDY_OPTIONS= {
 ENABLE_TEMPLATE_MIXIN = False
 
 ## TemplateMixin write permission. Only if the member has this permission he
-## is allowed to choose another permission then the default permission
+## is allowed to choose another template then the default permission
 TEMPLATE_MIXIN_PERMISSION = CMFCorePermissions.ModifyPortalContent
 # TEMPLATE_MIXIN_PERMISSION = CMFCorePermissions.ReviewPortalContent
 # TEMPLATE_MIXIN_PERMISSION = CMFCorePermissions.ManagePortal
@@ -75,7 +75,8 @@ CONSTRAIN_TYPES_MIXIN_PERMISSION = CMFCorePermissions.ManagePortal
 #CONSTRAIN_TYPES_MIXIN_PERMISSION = CMFCorePermissions.ReviewPortalContent
 
 ## Document History view permission
-HISTORY_VIEW_PERMISSION = CMFCorePermissions.ModifyPortalContent
+HISTORY_VIEW_PERMISSION = CMFCorePermissions.ReviewPortalContent
+# HISTORY_VIEW_PERMISSION = CMFCorePermissions.ModifyPortalContent
 # HISTORY_VIEW_PERMISSION = CMFCorePermissions.View
 
 ## maximum upload size for ATImage and ATFile in MB. 0 is infinitiv
